# abms-eval-2025

./: .gitignore  README.md  benchmark_report.md  check_imports.py  compare_aspects.py  environment.yml  explore_structure.sh  list-project.txt  pyproject.toml  show_aspects.py  test_complex.jsonl  test_complex_fixed.jsonl  test_complex_output.jsonl  test_comprehensive.jsonl  test_comprehensive_results.jsonl  test_fixed_output.jsonl  test_output.jsonl  test_sample.jsonl  test_sample_cached_output.jsonl  test_sample_output.jsonl
backups/: complexity_analysis.py  formalism_analysis.py  objectivity_analysis.py  quantitative_analysis.py  reliability_analysis.py  social_orientation_analysis.py
backups/original_modules/: actionability_analysis.py  social_orientation_analysis.py
data/processed/: test.jsonl  train.jsonl
data/raw/: ag_news_120000.jsonl  ag_news_50k.jsonl  amazon_polarity_320000.jsonl  dbpedia_14_560000.jsonl
scripts/: abms_pipeline.py  aws_optimized_batch_encode.py  batch_encode.py  batch_encode_fixed.py  cached_aws_batch_encode.py  parallel_batch_encode.py  robust_aws_batch_encode.py  robust_aws_fixed.py  simple_batch_encode.py  verify_consistency.py
src/: __init__.py  cli.py  encoder.py
src/abms/publisher/: publisher_app.py  verification_module.py
src/publisher/: aspect_based_metadata_generator.py  authentication_module.py  data_ingestion.py
src/reader/: content_speculation.py  knowledge_base.json  reader_app.py
src/shared/: utilities.py
src/utilities/: crypto_utils.py  file_utils.py  net_retry.py  sanitize_utils.py
tests/: test_abms.py
(+38 files in other folders)
