[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abms"
version = "0.1.0"
description = "Aspect-Based Metadata Suite"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}          # “src layout” root

[tool.setuptools.packages.find]      # ← find-table, **not** an array
where      = ["src"]                # look under src/
include    = ["abms*",]             # take abms and its subpackages